--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -361,6 +361,16 @@ input{
   font-family: Helvetica, sans-serif;
 }
 
+#ui-survey {
+  position: absolute;
+  width: 200px;
+  z-index: 60;
+  font-family: Helvetica, sans-serif;
+  padding: 12px;
+  bottom: 25px;
+  left: 25px;
+}
+
 .ui h4 {
   padding: 0;
   margin: 0;
